<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.camera.view.PreviewView
            android:id="@+id/previewView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.ak.qrscanner.widget.CodeScannerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:frameColor="@color/white"
            app:frameThickness="@dimen/dimen_3dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/dimen_15dp"
            android:paddingVertical="@dimen/dimen_30dp"
            android:weightSum="2">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/icnCloseScanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_close"
                    app:tint="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/focus_the_scanner"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/text_view"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_15dp"
                    android:gravity="center"
                    android:text="@string/scan_qr_code"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/iconFlash"
                            android:layout_width="@dimen/dimen_40dp"
                            android:layout_height="@dimen/dimen_40dp"
                            android:background="@drawable/icon_torch"
                            android:backgroundTint="@color/white"
                            app:layout_constraintEnd_toEndOf="@+id/txtFlashHint"
                            app:layout_constraintStart_toStartOf="@+id/txtFlashHint"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txtFlashHint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/switch_on_flashlight"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="10sp"
                            app:layout_constraintEnd_toStartOf="@+id/txtGalleryHint"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/iconFlash" />

                        <ImageView
                            android:id="@+id/iconGallery"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/icon_gallery"
                            android:backgroundTint="@color/white"
                            app:layout_constraintEnd_toEndOf="@+id/txtGalleryHint"
                            app:layout_constraintStart_toStartOf="@+id/txtGalleryHint"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txtGalleryHint"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dimen_10dp"
                            android:text="@string/upload_qr_code_hint"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="10sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/txtFlashHint"
                            app:layout_constraintTop_toBottomOf="@+id/iconGallery" />
                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <androidx.cardview.widget.CardView
                        android:id="@+id/crdSerialNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ffffff"
                        android:gravity="center"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/dimen_10dp"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingHorizontal="@dimen/dimen_15dp"
                            android:paddingBottom="@dimen/dimen_35dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dimen_10dp"
                                android:textStyle="bold"
                                android:textSize="16sp"
                                android:text="@string/result_of_qr_code"
                                android:textAlignment="center"
                                android:textColor="@color/black" />

                            <TextView
                                android:id="@+id/txtScanResult"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/dimen_10dp"
                                android:textAlignment="center"
                                android:textColor="@color/black" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>